@@ -36,8 +36,8 @@ EBUILD xf86-video-intel-2.20.2.ebuild 1355 SHA256 f7e654a851f88ce3e7d8b5a1df697d
 EBUILD xf86-video-intel-2.20.3.ebuild 1355 SHA256 9a5b47dde9dc1d8d1b81c55230d1b764407f919e515aae94ad723abfeb27dd62 SHA512 b67d0c3146535d11a6c3274704eaa890c7ad22448626e41435424973db3d016b7853d264f998eac033a46bbb87ea25dae2b12821746b35180d842e0db9166db3 WHIRLPOOL fada91129f3cd2ddc87563b694a0d0adc301419d770559a7078e910fa9fbf1c8e1cdf9be544ca1495bbffb358a713dcb0f9eaf1825cd35910a2b006f0aa197e2
 EBUILD xf86-video-intel-2.20.5.ebuild 1355 SHA256 46bb876a6a94b2a49f3310a2f821ab22f177be5b4bfc8157e85ec50e717a8c41 SHA512 dfe6be20b8335ca2a4b9e6548e640070625943eb2d831dad16a087bba71f6814849c4686dada97060fded46c326f6a8d85d68a75049ee92fea1bd311c5f08878 WHIRLPOOL 40396f8213764fb73d57af3edb1ba4055337ff10e1afe0c69c9e8a014bbfeaabf2bb7d0e0cdf0e9aeadcc156a0d3a75640041d53c5c68619ea0570e9366e4144
 EBUILD xf86-video-intel-2.20.6.ebuild 1355 SHA256 74a4b84cdfb5a8fb7af605d1dce5536e03a22445e0bfa3e71f1c5b0ac1cba358 SHA512 12ea218e33dee88e9df3429c0a5e17e9758b1ca819e482cc454fa4c56e0165c6ebcd56313527736067b037e44b38a2f4284e9fc08103d877a29408668299d59c WHIRLPOOL 7f02f3cec12b40189063adcffa03f9e268afaf6e53966e4aa4d83c37b283464de8f829529452d6ddd85f0f1bab184ffc6c248dd18d9d78585e57c9e89c4cace1
-EBUILD xf86-video-intel-2.20.7.ebuild 1404 SHA256 eaac469a806feca9bdb80bda6956b29760d77814d8b84a76780220b1540c4db4 SHA512 6c42bbdfd7f675a37d98b8fc7c653b6a5493343b6bb8ac573a8b3fb4e2567752338019cc0a91f2d439e909efb47646450ebfceddaae8b9f4d461617a9214e843 WHIRLPOOL 1d152394317993d0071303369a530d08510bc8320443f7b0447d5b3e08d0f8ea99259887b8a506c5c3cbc85b100ab4b2c4e681192fe4b576f380f6bd82db99ca
+EBUILD xf86-video-intel-2.20.7.ebuild 1426 SHA256 b600c1ef7f99402d56bef0d459c33819e6ba38a08e71d32f87399a75e96567c3 SHA512 b809f67f7d60c545a8339f65f0174abbef7cfad349f47e21dfb3833c5ee8ffb4a2d690d5c86877df9cc2f47294b15d724efadc05d77869df5b6f762aa1873d9b WHIRLPOOL c0e15a48faaf0f72a718c23e037ef8543c89118d8f59fd980cc4551c099e1ae56b0d47f1509a09029ce49c9e4af392917cb3ed88ae2b5e40fc61335e9e5ec1a0
 EBUILD xf86-video-intel-2.8.1.ebuild 794 SHA256 d012b3c43258b9e5e06d56e1d4aec2711644443eb927e800f9525bdc9610bf2f SHA512 e3791c7e80bb544618893401fc9dd157e5ce6d18727630ca7dec24ef8687bbfdfa2954fb70eebe31b0179c79e94861b6d4f2dedfd774017a1b492bad5944c36f WHIRLPOOL 93c4340495ec0b6fe6862a7e91bc8c748f96148e89980041bb0bf77e9982165af23f2e40b396fa0c4ebe9966b2d228182fd87403744c2f86cd0cfea229c3ac49
 EBUILD xf86-video-intel-2.9.1.ebuild 776 SHA256 7093496b4a55550f1f2a11b0f405be716f5da354947ff7380a052e4fd6954129 SHA512 29baaa622d1f6f3a8109174fe93569a5c1f25a862b81d6b72ca26e8ec8afdec3a072fce500a1bf30a11048650dc1eac1acef1dbae8e7e3506918e97ce0fda774 WHIRLPOOL 5377d90052588bebdae21154d4ff34703e9f5c468a76cf0fae92901e65895cc395d133f225ff777c5dbd250c995b11e60c4a6e8faafc1f65e1d81f86efffab41
-MISC ChangeLog 48014 SHA256 16c5ad748aa9402ceeca42efcf42c3b292b7120a97890e97870039ca89a05235 SHA512 d1cdfb6d1d084bc0dbfd59888a754f5312c6f349a6ae8dc79bb666d755a1027631c11ad63f264bb79e69fa4d7c98710e56ac3ae726b21e14f9ea9458f70a89d4 WHIRLPOOL ad612867059393a331f084d816ed42d15626153b1300b2af53f89c45f91746d94bad56cf9eb912b65c7e65bd032fc8763b43ae9d2e3307f7e7b6d87040a33101
-MISC metadata.xml 412 SHA256 7c23f00f65679bf61250243d619c5677fbeb2955abdcb1fbdcd9f17d183e1977 SHA512 3c805a36dc67e077610b9897f19b34fcb179ca1daef6edb45d893b4898ebd54561aaf284be97cb2a4f093d08bf3d65cb8fc649d4467e6d46a7dd46905ce53be0 WHIRLPOOL c4a938012b28f6b8c7eb381222504e817f1a7177dadca9f47cefb36f29fe71617569512c3af430bb43adb9e71dc2b9fe3d284064c525bf2462d0e96f092f2ffc
+MISC ChangeLog 48156 SHA256 dfc1a42f1244bffc01351e4072b85a2698709464502fb8a686d2bec094b6592a SHA512 f63e88cd69cf34ef52ab2832830fc847e83b40bb1d3d058df6c00a968d41ec2faa9ee26fd5381c1a24813703907765167c72b54d9d14160f9670fa6f7160bd62 WHIRLPOOL 47371a48dff9ef19040c9797dca15f5ab3e91722b3c2eb64e08a7cdbbb15008c7e2fb38d202ce818366572cdf4cccca0770db5105c44eccca9e607a08237cc5a
+MISC metadata.xml 483 SHA256 b96de77e3bad545136bdb56ed473b997b8b1ef7ae8f7137e9fd856e4b64a8aaf SHA512 48ed87bf243bd30ff54717c0c5634660c721ed620dae9c106fda193f937a47200c7e598be118c2ea2d6dfa589d9fc918a5e269d2e583a0326a1b8132c9e243ba WHIRLPOOL 89de9b7128187483a8f44506afdc59453c4ef47ea5c5914da73fe49d651afb48fdded3d23c72e42950cd048d4f509e8aed632d090fec327f0ab5c28e9aeacafc
