@@ -6,5 +6,6 @@
 		<flag name="glamor">Enable Glamor OpenGL 2D acceleration</flag>
 		<flag name="sna">Enable SandyBridge's New Acceleration (useful on all chipsets, not just SandyBridge)</flag>
 		<flag name="uxa">Enable UMA Acceleration Architecture</flag>
+		<flag name="xvmc">Enables X-Video Motion Compensation support</flag>
 	</use>
 </pkgmetadata>
