@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-video-intel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.100 2012/09/10 20:08:24 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-intel/ChangeLog,v 1.101 2012/09/11 21:06:42 remi Exp $
+
+  11 Sep 2012; Rémi Cardona <remi@gentoo.org> xf86-video-intel-2.20.7.ebuild,
+  metadata.xml:
+  Add USE=xvmc, patch by Nikoli, see bug #434720.
 
 *xf86-video-intel-2.20.7 (10 Sep 2012)
 
